--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "glob": "^7.1.2",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "syntaxhighlighter": "^4.0.1"
   }
 }
